[gd_scene load_steps=10 format=3 uid="uid://b4erqpgudrud1"]

[ext_resource type="Script" path="res://proc/proc_gen.gd" id="1_jic8r"]
[ext_resource type="Script" path="res://addons/road-generator/nodes/road_manager.gd" id="2_tvfv4"]
[ext_resource type="Script" path="res://addons/road-generator/nodes/road_container.gd" id="3_so1bi"]
[ext_resource type="Material" uid="uid://caeirfsvrhnic" path="res://addons/road-generator/resources/road_texture.material" id="4_iygwo"]
[ext_resource type="Script" path="res://addons/road-generator/nodes/road_point.gd" id="5_lqjw5"]
[ext_resource type="PackedScene" uid="uid://8hmxxf5hctq4" path="res://proc/guards.tscn" id="6_4nqpp"]

[sub_resource type="Curve3D" id="Curve3D_6lxdx"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 16, -8, 0, 0, 0, 0, -5, -2.79753e-06, 0, -32, -8, 0, 32),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_dgy2j"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 16, 8, 0, 0, 0, 0, -5, -2.79753e-06, 0, -32, 8, 0, 32),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_2y1pi"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 16, -4, 0, 0, 0, 0, -5, -2.79753e-06, 0, -32, -4, 0, 32),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Proc" type="Node3D"]
script = ExtResource("1_jic8r")
target_node = NodePath("../CharacterBody3D")

[node name="RoadManager" type="Node3D" parent="."]
script = ExtResource("2_tvfv4")

[node name="vehicles" type="Node3D" parent="RoadManager"]

[node name="Road_001" type="Node3D" parent="RoadManager"]
script = ExtResource("3_so1bi")
material_resource = ExtResource("4_iygwo")
use_lowpoly_preview = true
create_edge_curves = true
generate_ai_lanes = true
edge_containers = Array[NodePath]([NodePath(""), NodePath("")])
edge_rp_targets = Array[NodePath]([NodePath(""), NodePath("")])
edge_rp_target_dirs = Array[int]([-1, -1])
edge_rp_locals = Array[NodePath]([NodePath("RP_001"), NodePath("RP_002")])
edge_rp_local_dirs = Array[int]([0, 1])

[node name="RP_001" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("5_lqjw5")
traffic_dir = Array[int]([1, 1])
lanes = Array[int]([0, 2])
prior_pt_init = NodePath("../RP_002")
next_mag = 16.0

[node name="RP_002" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.79753e-06, 0, 32)
script = ExtResource("5_lqjw5")
traffic_dir = Array[int]([1, 1])
lanes = Array[int]([0, 2])
next_pt_init = NodePath("../RP_001")
prior_mag = 16.0
next_mag = 16.0

[node name="Guards" parent="RoadManager/Road_001/RP_002" instance=ExtResource("6_4nqpp")]

[node name="edge_R" type="Path3D" parent="RoadManager/Road_001/RP_002"]
curve = SubResource("Curve3D_6lxdx")
metadata/_edit_lock_ = true

[node name="edge_F" type="Path3D" parent="RoadManager/Road_001/RP_002"]
curve = SubResource("Curve3D_dgy2j")
metadata/_edit_lock_ = true

[node name="edge_C" type="Path3D" parent="RoadManager/Road_001/RP_002"]
curve = SubResource("Curve3D_2y1pi")
metadata/_edit_lock_ = true
